Add option to change port

--- a/roles/mediamarkov/templates/systemd.j2
+++ b/roles/mediamarkov/templates/systemd.j2
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 User={{ app_user }}
 WorkingDirectory={{ app_dir }}
-ExecStart=/usr/sbin/uwsgi --socket 0.0.0.0:8000 --protocol=http --plugins python3 -w {{ flask_object_module }} --callable app
+ExecStart=/usr/sbin/uwsgi --socket 0.0.0.0:{{ app_port }} --protocol=http --plugins python3 -w {{ flask_object_module }} --callable app
 
 [Install]
 WantedBy=multi-user.target
