--- a/roles/flowriter_studio/templates/systemd.j2
+++ b/roles/flowriter_studio/templates/systemd.j2
@@ -4,8 +4,9 @@ After=network.target
 
 [Service]
 User={{ app_user }}
+KillSignal=SIGQUIT
 WorkingDirectory={{ app_dir }}
-ExecStart={{ uwsgi_path.stdout }} --socket 0.0.0.0:{{ app_port }} --protocol=http --plugins python3 -w {{ flask_object_module }} --callable app -H {{ app_virtualenv }}
+ExecStart={{ uwsgi_path.stdout }} --plugin systemd_logger --logger systemd --socket 0.0.0.0:{{ app_port }} --protocol=http --plugins python3 -w {{ flask_object_module }} --callable app -H {{ app_virtualenv }}
 
 [Install]
 WantedBy=multi-user.target
